src/styles/responsive/small.scss
@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
@mixin margin-auto {
  margin: 0 auto;
  padding: 0;
}

@mixin text-shadow {
  color: #fff;
  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.66);
}

@mixin transition {
  transition: all 250ms ease;
  -webkit-transition: all 250ms ease;
  -moz-transition: all 250ms ease;
}

@keyframes shrinkHeight {
  from {
    height: 100%;
  }
  to {
    height: 0;
  }
}

@media screen and (min-width: 1px) {
*,
*::before,
*::after {
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

  html,
  body {
    background: hsl(30, 13%, 6%);
    color: #fff;
    height: 100%;
    width: 100%;
  }

  a {
    color: #fff;
  }

  // Main Header
  header.main-header {
    background: no-repeat fixed center center / cover;
    background-image: url("../images/paintball-in-forest-1080.jpg");
    color: #fff;
    display: grid;
    grid-template-columns: 1fr;
    height: 100vh;
    h1,
    h2 {
      @include text-shadow;
    }
    .col {
      align-items: center;
      display: flex;
      flex-direction: column;
      justify-content: center;
      a {
        @include text-shadow;
        @include transition;
        background: transparent;
        border: 2px solid hsl(70, 50%, 75%);
        display: inline-block;
        font-size: 1.25em;
        font-weight: 700;
        margin: 1em auto;
        overflow: hidden;
        padding: 0.5em 1em;
        position: relative;
        text-align: center;
        text-decoration: none;
        z-index: 2;

        &::before {
          @include transition;
          content: "";
          background: hsl(70, 50%, 75%);
          display: block;
          height: 100%;
          left: 0;
          position: absolute;
          top: 0;
          transform: translateX(-100%);
          width: 100%;
          z-index: 1;
        }
        &:hover {
          color: hsl(70, 50%, 75%);
          border-color: #fff;
          &::before {
            animation: shrinkHeight 250ms ease-out 250ms forwards;
            transform: translateX(0);
            transform-origin: bottom;
          }
        }
      }
    }
  }

  // About Us Section
  section.about-us {
    background: hsla(65, 28%, 15%, 0%);
  display: grid;
    align-items: center;
    gap: 1em;
    grid-template-columns: repeat(auto-fit, minmax(.75fr, 1fr));
    grid-auto-rows: min-content;
    margin: {
      top: 1em;
      right: auto;
      bottom: 0;
      left: auto;
    }
    padding: {
      top: 0;
      right: 1em;
      bottom: 0;
      left: 1em;
    }
    max-width: 968px;
    a {
      min-width: 125px;
    }
    .card {
      margin: 1em auto;
      text-align: center;
      .card-inner {
        align-items: stretch;
        display: flex;
        flex-direction: column;
        justify-content: center;
        .card-img-container {
          display: none;
          padding: 1em;
          .card-img {
            max-height: 100%;
            max-width: 100%;
          }
        }
        .card-content-container {
          background:hsla(62, 23%, 24%, 25%);
          border: 1px solid #fff;
          min-height: 350px;
          padding: 1em;
          text-align: center;
          h3 {
            display: inline-block;
            margin-bottom: 1em;
            position: relative;
            &::after {
              background:#fff;
              bottom: -7px;
              content: '';
              display: block;
              height: 2px;
              left: 0;
              max-width: 150px;
              position: absolute;
              width: 100%;
            }
          }
          p {
            margin: 1em auto;
            text-align: left;
          }
          a {
            @include text-shadow;
            @include transition;
            background: transparent;
            border: 2px solid hsl(70, 50%, 75%);
            display: inline-block;
            font-size: 1.25em;
            font-weight: 700;
            margin: 1em auto;
            overflow: hidden;
            padding: 0.5em 1em;
            position: relative;
            text-align: center;
            text-decoration: none;
            z-index: 2;
        
            &::before {
              @include transition;
              content: "";
              background: hsl(70, 50%, 75%);
              display: block;
              height: 100%;
              left: 0;
              position: absolute;
              top: 0;
              transform: translateX(-100%);
              width: 100%;
              z-index: 1;
            }
            &:hover {
              color: hsl(70, 50%, 75%);
              border-color: #fff;
              &::before {
                animation: shrinkHeight 250ms ease-out 250ms forwards;
                transform: translateX(0);
                transform-origin: bottom;
              }
            }
          }
        }
      }
    }
  }

  //  Pricing
  section.pricing {
    margin: auto;
    padding: 1em;
    text-align: center;
    .pricing-container {
      align-items: stretch;
      display: flex;
      flex-direction: column;
      margin: auto;
      padding: 0 1em;
      .price-card{
        background: hsla(49, 18%, 36%, 10%);
        flex: 1 1 100%;
        margin: 1em;
        padding: 1em;
        .price {
          font-size: 1.25em;
          font-weight: 800;
        }
        ul {
          padding: 0;
        }
        span,
        p,
        li {
          text-align: left;
        }
      }
    }
      
  }

  //  Contact
  section.contact {
    width: 100%;
    text-align: center;

  }

  //  Footer
  footer.main-footer {
    align-items: center;
    background: hsl(62, 23%, 24%);
    display: grid;
    gap: 1em;
    grid-template-columns: repeat(auto-fill, minmax(100%));
    padding: {
      top: 1em;
      right: 1em;
      bottom: 0em;
      left: 1em;
    }
    justify-items: center;
    h4 {
      padding: 0;
    }
    ul {
      list-style: none;
      width: 100%;
      li {
        display: inline-block;
        margin: {
          right: 1em;
        }
        a {
          padding: .5em 1.5em .5em 0em;
        }
      }
    }
    a {
      color: hsl(70, 50%, 75%);
    }
    .col {
      align-items: center;
      justify-content: flex-start;
      display: flex;
      flex-direction: column;
      margin: auto;
      height: 100%;
      width: 100%;
      h4 {
        align-self: flex-start;
        margin-bottom: 1em;
        position: relative;
        text-align: left;
        &::after {
          background:hsl(70, 50%, 75%);
          bottom: -7px;
          content: '';
          display: block;
          height: 2px;
          left: 50%;
          max-width: 150px;
          position: absolute;
          transform: translateX(-50%);
          width: 100%;
        }
      }
      ul {
        li {
          a {
            display: block;
            text-decoration: none;
            text-transform: lowercase;
          }
        }
      }
      address {
        padding: 0;
        width: 100%;
        span {
          &:first-of-type {
            font-weight: 800;
        }
        }
      }
    }
  }

  //  brand bar
  .brand-bar {
    align-items: center;
    background: hsl(30, 13%, 6%);
    display: grid;
    justify-content: center;
    padding: .25em 1em;
    
  }
}

